# http_client

./: CMakeLists.txt  README.md  http_client.vix  vix.json
examples/: minimal_request.cpp  parse_response.cpp  parse_url.cpp
include/http_client/: http_client.hpp
tests/: test_basic.cpp
